# effective-depth

./: README.md  pyproject.toml
src/effective-depth/: layers.py  main.py
