[project]
name = "effective-depth"
version = "1.0.0"
description = "Code for 'Leveraging the true depth of LLMs'"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "huggingface-hub>=0.26.2",
    "transformers>=4.46.2",
    "tiktoken>=0.8.0",
    "einops>=0.8.0",
    "torch==2.5.1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]  # This tells Hatch to look in the root directory instead of src/

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
